k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fintrack-service
  namespace: default
  labels:
    app: fintrack
spec:
  type: ClusterIP
  selector:
    app: fintrack
  ports:
    - name: http
      protocol: TCP
      port: 80           
      targetPort: 5000   
---

apiVersion: v1
kind: Service
metadata:
  name: fintrack-nodeport
  namespace: default
  labels:
    app: fintrack
spec:
  type: NodePort
  selector:
    app: fintrack
  ports:
    - name: http
      protocol: TCP
      port: 80            
      targetPort: 5000    
      nodePort: 30080
